# Rulenix

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  setup-database-elevated.ps1  setup-database.ps1  start-rulenix-cloudflare.ps1  start-rulenix.ps1  stop-rulenix.ps1
backend/: .env.development.example  .env.example  .env.production.example  .env.staging.example  .env.test.example  Cargo.toml  Dockerfile
backend/migrations/: 20260701000000_init.sql  20260701030000_rulenix_operations.sql  20260701040000_account_settings.sql  20260702000000_futures_breakout_strategy.sql  20260702010000_strategy_catalog.sql  20260702020000_demo_balance_accounting.sql  20260702030000_strategy_resilience.sql  20260702040000_secure_sessions.sql  20260702050000_rbac_trading_mode.sql  20260702060000_encrypted_broker_secrets.sql  20260702070000_broker_diagnostics.sql  20260703000000_abuse_prevention.sql  20260703010000_trading_risk_engine.sql  20260703020000_broker_execution_correctness.sql  20260703030000_broker_http_diagnostics.sql  20260709000000_production_operations.sql  20260711000000_goldten_demo_balance.sql  20260713000000_backtesting.sql  20260714000000_margin_estimates.sql  20260714010000_margin_estimate_order_type.sql  20260715000000_ichimoku_live_strategy.sql  20260718000000_limit_ichimoku_instruments.sql  20260718010000_correct_goldten_backtest_pnl.sql
backend/src/: account.rs  alerts.rs  angel.rs  audit.rs  auth.rs  backtesting.rs  config.rs  credentials.rs  error.rs  home.rs  ichimoku_strategy.rs  jobs.rs  logs.rs  main.rs  margin.rs  market_ws.rs  (+7 more)
(+59 files in other folders)
